exports[`<SearchForm /> gives correct feedback when loaded 1`] = `
<form
  className="search-form form-group"
  onSubmit={[Function anonymous]}>
  <div
    className="search-input input-group">
    <label
      className="control-label"
      htmlFor="search-field">
      Search
      <span
        className="sr-only">
         App Catalog
      </span>
    </label>
    <div
      className="search-bar">
      <input
        className="form-control"
        id="search-field"
        onChange={[Function anonymous]}
        title="searchQuery"
        type="search"
        value="test search" />
      <button
        className="btn clear-btn"
        onClick={[Function anonymous]}
        type="button">
        <span
          className="sr-only">
          Clear
        </span>
        <span
          aria-hidden="true"
          className="icon-close" />
      </button>
      <button
        className="btn search-btn"
        type="submit">
        <span
          className="sr-only">
          Search
        </span>
        <span
          aria-hidden="true"
          className="icon-search" />
      </button>
    </div>
  </div>
</form>
`;

exports[`<SearchForm /> gives correct feedback when loading 1`] = `
<form
  className="search-form form-group"
  onSubmit={[Function anonymous]}>
  <div
    className="search-input input-group">
    <label
      className="control-label"
      htmlFor="search-field">
      Search
      <span
        className="sr-only">
         App Catalog
      </span>
    </label>
    <div
      className="search-bar">
      <input
        className="form-control"
        id="search-field"
        onChange={[Function anonymous]}
        title="searchQuery"
        type="search"
        value="test search" />
      <button
        className="btn clear-btn"
        onClick={[Function anonymous]}
        type="button">
        <span
          className="sr-only">
          Clear
        </span>
        <span
          aria-hidden="true"
          className="icon-close" />
      </button>
      <button
        className="btn search-btn"
        type="submit">
        <span
          className="sr-only">
          Search
        </span>
        <span
          aria-hidden="true"
          className="icon-search" />
      </button>
    </div>
  </div>
</form>
`;

exports[`<SearchForm /> matches previous snapshot 1`] = `
<form
  className="search-form form-group"
  onSubmit={[Function anonymous]}>
  <div
    className="search-input input-group">
    <label
      className="control-label"
      htmlFor="search-field">
      Search
      <span
        className="sr-only">
         App Catalog
      </span>
    </label>
    <div
      className="search-bar">
      <input
        className="form-control"
        id="search-field"
        onChange={[Function anonymous]}
        title="searchQuery"
        type="search"
        value="" />
      <button
        className="btn search-btn"
        type="submit">
        <span
          className="sr-only">
          Search
        </span>
        <span
          aria-hidden="true"
          className="icon-search" />
      </button>
    </div>
  </div>
</form>
`;

exports[`<SearchForm /> matches previous snapshot 2`] = `
<form
  className="search-form form-group"
  onSubmit={[Function anonymous]}>
  <div
    className="search-input input-group">
    <label
      className="control-label"
      htmlFor="search-field">
      Search
      <span
        className="sr-only">
         App Catalog
      </span>
    </label>
    <div
      className="search-bar">
      <input
        className="form-control"
        id="search-field"
        onChange={[Function anonymous]}
        title="searchQuery"
        type="search"
        value="test search" />
      <button
        className="btn clear-btn"
        onClick={[Function anonymous]}
        type="button">
        <span
          className="sr-only">
          Clear
        </span>
        <span
          aria-hidden="true"
          className="icon-close" />
      </button>
      <button
        className="btn search-btn"
        type="submit">
        <span
          className="sr-only">
          Search
        </span>
        <span
          aria-hidden="true"
          className="icon-search" />
      </button>
    </div>
  </div>
</form>
`;
